# geodepot

./: .gitignore  .vale.ini  404.html  CHANGELOG  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  THIRD_PARTY_LICENSES.md  Vagrantfile  conda-environment-py310.yaml  conda-environment-py311.yaml  conda-environment-py312.yaml  conda-environment.yaml  design-doc.md  flake.nix  index.html  justfile  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: documentation.yaml  package-release.yaml  package-release.yml  python-package-conda.yml  release-prepare.yaml  release-tag.yaml  test-lint.yaml  workflow-install-test.yaml
api/: index.html
cli/: index.html
concepts/: index.html
developing/: index.html
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  nginx_server.conf
docs/: api.md  cli.md  concepts.md  developing.md  examples.md  getting-started.md  index.md
experiments/pyinstaller/: cli.py  makefile
experiments/vcpkg/: CMakeLists.txt  main.cpp  vcpkg.json
getting-started/: index.html
packaging/ci/: check_bundle_self_contained.py  remove_path_leaking_bin_wrappers.py
packaging/install/: geodepot-install.ps1  geodepot-install.sh
packaging/pixi/: geodepot.cmd  geodepot.ps1  geodepot.sh
search/: search_index.json
src/geodepot/: __init__.py  __main__.py  case.py  cli.py  config.py  data.py  data_file.py  encode.py  errors.py  licenses.py  models.py  repository.py  user.py
tests/: conftest.py  test_bundle_audit.py  test_case.py  test_cli.py  test_cli_no_osgeo.py  test_config.py  test_data_file.py  test_encode.py  test_pull_integration.py  test_repository.py  test_repository_collaboration.py  test_user.py
tests/.geodepot/: index.geojson
tests/.geodepot/cases/wippolder/: wippolder.gpkg
vagrant/: bootstrap_server.sh  nginx_server.conf
