[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geodepot"
version = "1.0.1"
authors = [
    {name = "Balázs Dukai", email = "balazs.dukai@3dgi.nl"},
    {name = "Ravi Peters", email = "ravi.peters@3dgi.nl"}
]
description = "Test data storage system for geospatial data"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["geospatial", "software-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gdal==3.9.*",
    "pdal==3.4.*",
    "click==8.1.*",
    "requests==2.32.*",
    "fabric==3.2.*"
]

[project.optional-dependencies]
dev = ["pytest", "pyinstaller==6.10.*", "ruff", "bumpver", "mkdocs", "mkdocs-material"]

[project.scripts]
geodepot = "geodepot:__main__.geodepot_grp"

[project.urls]
Homepage = "https://github.com/3DGI/geodepot"
Documentation = "https://3dgi.github.io/geodepot/"
Repository = "https://github.com/3DGI/geodepot.git"
Issues = "https://github.com/3DGI/geodepot/issues"
Changelog = "https://github.com/3DGI/geodepot/blob/main/CHANGELOG.md"

[tool.ruff]
src = ["src", "tests"]

[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
