[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "geodepot"
version = "1.0.5"
authors = [
    {name = "Balázs Dukai", email = "balazs.dukai@3dgi.nl"},
    {name = "Ravi Peters", email = "ravi.peters@3dgi.nl"}
]
description = "Test data storage system for geospatial data"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["geospatial", "software-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gdal==3.9.*",
    "pdal==3.4.*",
    "click==8.1.*",
    "requests==2.32.*",
    "fabric==3.2.*"
]

[dependency-groups]
dev = ["pytest", "ruff", "bumpver", "mkdocs", "mkdocs-material"]

[project.scripts]
geodepot = "geodepot:__main__.geodepot_grp"

[project.urls]
Homepage = "https://github.com/3DGI/geodepot"
Documentation = "https://3dgi.github.io/geodepot/"
Repository = "https://github.com/3DGI/geodepot.git"
Issues = "https://github.com/3DGI/geodepot/issues"
Changelog = "https://github.com/3DGI/geodepot/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.bumpver]
current_version = "1.0.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
click = "8.1.*"
fabric = "3.2.*"
gdal = "3.9.*"
python = "3.12.*"
python-pdal = "3.4.*"
requests = "2.32.*"

[tool.pixi.feature.local.dependencies]
geodepot = { path = "." }

[tool.pixi.package]
name = "geodepot"
version = "1.0.5"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*", channels = ["https://prefix.dev/pixi-build-backends", "conda-forge"] }

[tool.pixi.package.build.config]
ignore-pypi-mapping = true

[tool.pixi.package.build-dependencies]
python = "3.12.*"

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
click = "8.1.*"
fabric = "3.2.*"
gdal = "3.9.*"
python = "3.12.*"
python-pdal = "3.4.*"
requests = "2.32.*"

[tool.pixi.environments]
default = { solve-group = "runtime" }
dev = { features = ["local", "dev"], solve-group = "dev" }

[tool.pixi.tasks]
lint = "ruff check"
format = "ruff format"
format-check = "ruff format --check"
test = "pytest"
docs-build = "mkdocs build"
docs-deploy = "mkdocs gh-deploy --force"
download-data = "python -c \"from pathlib import Path; import urllib.request; import zipfile; url = 'https://data.3dgi.xyz/geodepot-test-data/data.zip'; archive = Path('data.zip'); urllib.request.urlretrieve(url, archive); zipfile.ZipFile(archive).extractall(); archive.unlink()\""
